--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -13,9 +13,10 @@ android {
     }
     buildTypes {
         release {
-            shrinkResources false
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
         }
     }
     compileOptions {
@@ -36,7 +37,7 @@ android {
         production {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1'
-            targetSdkVersion 24
+            targetSdkVersion 15
         }
     }
     useLibrary 'org.apache.http.legacy'
@@ -47,19 +48,17 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile files('libs/simple-xml-2.7.jar')
+    compile files('libs/fs-android-1.0.jar')
+    compile files('libs/in-app-purchasing-2.0.61.jar')
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.google.android.gms:play-services:9.4.0'
-    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.android.support:support-v4:24.2.0'
     compile 'com.google.firebase:firebase-core:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile files('libs/simple-xml-2.7.jar')
-    compile files('libs/fs-android-1.0.jar')
-    compile files('libs/in-app-purchasing-2.0.61.jar')
 }
-
 
 apply plugin: 'com.google.gms.google-services'
