--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,13 @@ buildscript {
     repositories {
         //jcenter()
         maven { url "http://jcenter.bintray.com" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.google.gms:google-services:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,5 +21,6 @@ allprojects {
     repositories {
         //jcenter()
         maven { url "http://jcenter.bintray.com" }
+        google()
     }
 }
