--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 .idea/runConfigurations.xml
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/inspectionProfiles/Project_Default.xml
+ScrewyLouie.svg
+LittleFamilyApp/production
+LittleFamilyTree-android.iml
+*.bak
