--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -1,49 +1,60 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        production {
+            keyAlias 'yellowforktech'
+            storeFile file('/Users/jfinlay/Code/LittleFamilyTree-android/keystore.jks')
+            storePassword 'jrfjr103'
+        }
+    }
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.yellowforktech.littlefamilytree"
         minSdkVersion 15
         targetSdkVersion 25
-        versionName "2.2.0"
-        versionCode 225
+        versionName '2.3.0'
+        versionCode 230
         multiDexEnabled true
+        signingConfig signingConfigs.production
     }
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.production
         }
         debug {
             minifyEnabled false
+            signingConfig signingConfigs.production
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
     flavorDimensions "tier"
-
     productFlavors {
         local {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytree'
-            targetSdkVersion 24
+            targetSdkVersion 25
             dimension "tier"
+            signingConfig signingConfigs.production
         }
         beta {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytreefree'
-            targetSdkVersion 24
+            targetSdkVersion 25
             dimension "tier"
+            signingConfig signingConfigs.production
         }
         production {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1'
-            targetSdkVersion 24
+            targetSdkVersion 25
             dimension "tier"
+            signingConfig signingConfigs.production
         }
     }
     useLibrary 'org.apache.http.legacy'
@@ -55,15 +66,14 @@ repositories {
 
 dependencies {
     compile files('libs/in-app-purchasing-2.0.61.jar')
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.google.android.gms:play-services:10.2.0'
-    compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.google.firebase:firebase-core:10.2.0'
-    compile 'com.google.firebase:firebase-database:10.2.0'
-    compile 'com.google.firebase:firebase-auth:10.2.0'
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.google.firebase:firebase-core:16.0.1'
+    compile 'com.google.firebase:firebase-database:16.0.1'
+    compile 'com.google.firebase:firebase-auth:16.0.3'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.3.0'
-    compile('org.simpleframework:simple-xml:2.7.+'){
+    compile('org.simpleframework:simple-xml:2.7.+') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
