--- a/LittleFamilyApp/build.gradle
+++ b/LittleFamilyApp/build.gradle
@@ -6,14 +6,15 @@ android {
             keyAlias 'yellowforktech'
             storeFile file('/Users/jfinlay/Code/LittleFamilyTree-android/keystore.jks')
             storePassword 'jrfjr103'
+            keyPassword 'jrfjr103'
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.yellowforktech.littlefamilytree"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionName '2.3.0'
         versionCode 230
         multiDexEnabled true
@@ -38,21 +39,21 @@ android {
         local {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytree'
-            targetSdkVersion 25
+            targetSdkVersion 26
             dimension "tier"
             signingConfig signingConfigs.production
         }
         beta {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytreefree'
-            targetSdkVersion 25
+            targetSdkVersion 26
             dimension "tier"
             signingConfig signingConfigs.production
         }
         production {
             minSdkVersion 15
             applicationId 'com.yellowforktech.littlefamilytree.com.yellowforktech.littlefamilytree.littlefamilytree1'
-            targetSdkVersion 25
+            targetSdkVersion 26
             dimension "tier"
             signingConfig signingConfigs.production
         }
@@ -67,8 +68,8 @@ repositories {
 dependencies {
     compile files('libs/in-app-purchasing-2.0.61.jar')
     compile 'com.android.support:multidex:1.0.3'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.google.firebase:firebase-core:16.0.1'
     compile 'com.google.firebase:firebase-database:16.0.1'
     compile 'com.google.firebase:firebase-auth:16.0.3'
